--- a/SDE/SDE.tex
+++ b/SDE/SDE.tex
@@ -45,14 +45,16 @@
 
     \begin{experienceSection}{Professional Experience}
     \experienceItem[
-        company={Arizona State University},
+        company={DriverAI LLC},
         location={Remote},
-        position={Research Assistant, VISA Lab},
-        duration={Jun 2025 - Present}
+        position={Software Engineer},
+        duration={Dec 2025 - Present}
     ]
     \begin{itemize}
         \itemsep -6pt {}
-        \item Developing \textbf{FlowBench}, a workflow-based distributed benchmark by leveraging \textbf{Python}, \textbf{Docker}, \textbf{Kubernetes}, and FaaS principles to evaluate custom edge computing applications, providing a comprehensive report on 6+ metrics.
+        \item Designed and implemented a \textbf{Python FastAPI} backend with \textbf{AWS RDS MySQL} database to gamify the shopping experience. 
+        \item Engineered \textbf{GitHub Actions CI/CD} pipelines automating \textbf{Docker} image builds and deployments to \textbf{AWS ECR}, reducing deployment time by 30\%
+        \item Architected migration strategy from monolithic architecture to \textbf{microservices}, improving scalability and reducing deployment coupling.
     \end{itemize}
 
 
@@ -97,16 +99,6 @@
         \itemsep -6pt {}
         \item Built an AI-powered web application using \textbf{FastAPI} and \textbf{React} that automates document form completion through conversational interactions, leveraging\textbf{ OpenAI GPT-4} for natural language understanding and intelligent question generation
         \item Implemented dynamic conversation flows and document generation, reducing form completion time by \textbf{40\%} while achieving \textbf{90\%+ accuracy} in mapping conversational responses to structured document fields
-    \end{itemize}
-
-    \projectItem[
-        title={JobTrail - Go-based Job Tracker | Go, Javascript, SQLite},
-        duration={May 2025},
-    ]
-    \begin{itemize}
-        \vspace{-0.5em}
-        \itemsep -6pt {}
-        \item Developed a full-stack job tracking application using \textbf{Go} backend (Gorilla Mux), \textbf{SQLite} database, and \textbf{JavaScript} browser extension, reducing manual job application logging time by 80\% through automated data capture from 5+ major job boards
     \end{itemize}
 
     \projectItem[
