Changed impact percentages

--- a/SDE/SDE.tex
+++ b/SDE/SDE.tex
@@ -52,9 +52,9 @@
     ]
     \begin{itemize}
         \itemsep -6pt {}
-        \item Designed and implemented a \textbf{Python FastAPI} backend with \textbf{AWS RDS MySQL} database to gamify the shopping experience. 
+        \item Designed and implemented a \textbf{Python FastAPI} backend with \textbf{AWS RDS MySQL} database to gamify the shopping experience
         \item Engineered \textbf{GitHub Actions CI/CD} pipelines automating \textbf{Docker} image builds and deployments to \textbf{AWS ECR}, reducing deployment time by 30\%
-        \item Architected migration strategy from monolithic architecture to \textbf{microservices}, improving scalability and reducing deployment coupling.
+        \item Architected migration strategy from monolithic architecture to \textbf{microservices}, improving scalability and reducing deployment coupling
     \end{itemize}
 
 
@@ -66,7 +66,7 @@
     ]
     \begin{itemize}
         \itemsep -6pt {}
-        \item Architected a \textbf{JavaScript-based} data processing pipeline with \textbf{Cribl Stream}, processing 80GB+ daily logs through 10+ conditional routing rules, reducing Splunk ingestion costs by 30\%
+        \item Architected a \textbf{JavaScript-based} data processing pipeline with \textbf{Cribl Stream}, processing 80GB+ daily logs through 10+ conditional routing rules, saving \$30,000 annually in Splunk licensing costs
         \item Developed a container image synchronization system using \textbf{Python} and \textbf{Ansible}, integrating Red Hat Registry APIs with Nexus Repository to automate artifact management and eliminate 90\% of manual container updates
         
     \end{itemize}
@@ -81,7 +81,7 @@
         \itemsep -6pt {}
         \item Developed and maintained \textbf{Java-based} microservices handling 5M+ daily healthcare transactions, implementing \textbf{RESTful APIs} and event-driven architectures that reduced patient data retrieval latency by 40%
         \item Built cloud-native data transformation pipelines in \textbf{Python} to migrate 80\% of enterprise data (500+ TB) from on-premise infrastructure to AWS, designing \textbf{ETL} workflows that ensured zero data loss and 99.9\% uptime
-        \item Engineered automated monitoring solutions using Python and \textbf{Splunk} APIs, developing custom alerting logic and incident response workflows that reduced mean time to resolution (MTTR) by 30\%
+        \item Engineered automated monitoring solutions using Python and \textbf{Splunk} APIs, developing custom alerting logic and incident response workflows that reduced mean time to resolution (MTTR) by 25%
         \item Collaborated with cross-functional teams to deliver \textbf{300+} microservice releases, implementing feature flags, \textbf{A/B testing} frameworks, and rollback mechanisms that improved deployment safety and enabled rapid iteration
     \end{itemize}
 
@@ -109,12 +109,8 @@
         \vspace{-0.5em}
         \itemsep -6pt {}
         \item Devised a multimodal pipeline using \textbf{Python} to extract and vectorize content from \textbf{2000+} arXiv papers, implementing \textbf{CLIP} and text embedding models, \textbf{DynamoDB} indexing and vector database storage
-        \item Implemented a similarity search and summarization pipeline with DynamoDB and GPT-4o mini to deliver concise, contextually relevant responses to user queries with an average response time of under \textbf{2 seconds}.
+        \item Implemented a similarity search and summarization pipeline with DynamoDB and GPT-4o mini to deliver concise, contextually relevant responses to user queries with an average response time of under \textbf{2 seconds}
     \end{itemize}
-
-    
-    
-
 
 \end{experienceSection}
 
