Added github links to my projects and increased font size for headings and important information

--- a/DevOps/DevOps.tex
+++ b/DevOps/DevOps.tex
@@ -50,10 +50,10 @@
     ]
     \begin{itemize}
         \itemsep -6pt {}
-        \item Designed and implemented a \textbf{Python FastAPI} backend with \textbf{AWS RDS MySQL} database to gamify the shopping experience. 
-        \item Engineered \textbf{GitHub Actions CI/CD} pipelines automating \textbf{Docker} image builds and deployments to \textbf{AWS ECR}, reducing deployment time by 30\%
-        \item Architected migration strategy from monolithic architecture to \textbf{microservices}, improving scalability and reducing deployment coupling.
+        \item Driving migration from \textbf{RDS MySQL} to Amazon \textbf{Aurora PostgreSQL}, building \textbf{Terraform} automation pipelines to replicate production infrastructure and enable consistent, repeatable deployment across environments
+        \item Engineered \textbf{GitHub Actions CI/CD} pipelines automating \textbf{Docker} image builds and deployments to \textbf{AWS ECR}, reducing deployment time by \textbf{30}\%
     \end{itemize}
+
 
     \experienceItem[
         company={Arch Mortgage Insurance},
@@ -72,12 +72,12 @@
     \experienceItem[
         company={Cerner Healthcare (Oracle Health)},
         location={Bangalore, India},
-        position={System Engineer},
+        position={DevOps Engineer},
         duration={May 2021 - Jul 2023}
     ]
     \begin{itemize}
         \itemsep -6pt {}
-        \item Led migration of \textbf{500TB+} enterprise healthcare data from on-prem infrastructure to AWS using \textbf{Python} and \textbf{Bash} scripts and AWS \textbf{S3}, reducing storage costs by \textbf{20\%} while maintaining HIPAA compliance
+        \item Led migration of \textbf{500TB+} enterprise healthcare data from on-prem infrastructure to AWS using \textbf{Python} and \textbf{Bash} scripts and AWS \textbf{S3}, reducing storage costs by \textbf{30\%} while maintaining HIPAA compliance
         \item Participated in 24/7 on-call rotations, triaging P1/P2 incidents and performing\textbf{ root cause analysis}, reducing mean time to resolution (MTTR) by \textbf{35\%} through improved runbooks and automated diagnostics
         \item Troubleshot \textbf{Jenkins} pipeline issues through root cause analysis, minimizing support ticket resolution time by \textbf{40\%} and ensuring \textbf{99.9\%} uptime for \textbf{CI/CD} workflows, leading to uninterrupted deployment pipelines
         \item Managed \textbf{300+} bi-weekly microservice deployments, using \textbf{Chef}, while also tracking them with \textbf{JIRA}, accelerating delivery of new UI and backend features in a fast-paced production environment
@@ -89,18 +89,19 @@
 \begin{experienceSection}{Academic Projects}
 
     \projectItem[
-        title={End-to-end Deployment Automation},
+        title={End-to-end Deployment Automation | AWS, GitHub Actions, Jenkins, Ansible, Bash | \href{https://github.com/Ajtambad/Terraform-Ansible-Project}{GitHub}},
         duration={Apr 2025},
     ]
     \begin{itemize}
         \vspace{-0.5em}
         \itemsep -6pt {}
-        \item Reduced deployment time by 90\% by building a fully automated \textbf{CI/CD} pipeline integrating Terraform (infrastructure provisioning), \textbf{Ansible} (configuration management), and \textbf{Jenkins/GitHub Actions}
+        \item Reduced deployment time by \textbf{90\%} by building a fully automated \textbf{CI/CD} pipeline integrating Terraform (infrastructure provisioning), \textbf{Ansible} (configuration management), and \textbf{Jenkins/GitHub Actions}
         \item Implemented dynamic inventory management, automated SSH key rotation, and IAM role-based access for secure, zero-touch deployments to AWS EC2 instances
     \end{itemize}
 
+
     \projectItem[
-        title=AWS-based Face Recognition App,
+        title={AWS-based Face Recognition App | Python, AWS | \href{https://github.com/Ajtambad/Cloud-Computing}{GitHub}},
         duration={May 2024},
     ]
     \begin{itemize}
