--- a/SDE/SDE.tex
+++ b/SDE/SDE.tex
@@ -52,9 +52,8 @@
     ]
     \begin{itemize}
         \itemsep -6pt {}
-        \item Designed and implemented a \textbf{Python FastAPI} backend with \textbf{AWS RDS MySQL} database to gamify the shopping experience. 
-        \item Engineered \textbf{GitHub Actions CI/CD} pipelines automating \textbf{Docker} image builds and deployments to \textbf{AWS ECR}, reducing deployment time by 30\%
-        \item Architected migration strategy from monolithic architecture to \textbf{microservices}, improving scalability and reducing deployment coupling
+        \item Driving migration from \textbf{RDS MySQL} to Amazon \textbf{Aurora PostgreSQL}, building \textbf{Terraform} automation pipelines to replicate production infrastructure and enable consistent, repeatable deployment across environments
+        \item Engineered \textbf{GitHub Actions CI/CD} pipelines automating \textbf{Docker} image builds and deployments to \textbf{AWS ECR}, reducing deployment time by \textbf{30}\%
     \end{itemize}
 
 
@@ -66,8 +65,8 @@
     ]
     \begin{itemize}
         \itemsep -6pt {}
-        \item Architected a \textbf{JavaScript-based} data processing pipeline with \textbf{Cribl Stream}, processing 80GB+ daily logs through 10+ conditional routing rules, reducing Splunk ingestion costs by 30\%
-        \item Developed a container image synchronization system using \textbf{Python} and \textbf{Ansible}, integrating Red Hat Registry APIs with Nexus Repository to automate artifact management and eliminate 90\% of manual container updates
+        \item Architected a \textbf{JavaScript-based} data processing pipeline with \textbf{Cribl Stream}, processing 80GB+ daily logs through 10+ conditional routing rules, reducing Splunk ingestion costs by \textbf{\$32000} annually
+        \item Developed a container image synchronization system using \textbf{Python} and \textbf{Ansible}, integrating Red Hat Registry APIs with Nexus Repository to automate artifact management and eliminate \textbf{90}\% of manual container updates
         
     \end{itemize}
 
@@ -79,9 +78,9 @@
     ]
     \begin{itemize}
         \itemsep -6pt {}
-        \item Developed and maintained \textbf{Java-based} microservices handling 5M+ daily healthcare transactions, implementing \textbf{RESTful APIs} and event-driven architectures that reduced patient data retrieval latency by 40\%
-        \item Built cloud-native data transformation pipelines in \textbf{Python} to migrate 80\% of enterprise data (500+ TB) from on-premise infrastructure to AWS, designing \textbf{ETL} workflows that ensured zero data loss and 99.9\% uptime
-        \item Engineered automated monitoring solutions using Python and \textbf{Splunk} APIs, developing custom alerting logic and incident response workflows that reduced mean time to resolution (MTTR) by 30\%
+        \item Developed and maintained \textbf{Java-based} microservices handling 5M+ daily healthcare transactions, implementing \textbf{RESTful APIs} and event-driven architectures that reduced patient data retrieval latency by \textbf{40\%}
+        \item Built cloud-native data transformation pipelines in \textbf{Python} to migrate \textbf{80}\% of enterprise data (500+ TB) from on-premise infrastructure to AWS, designing workflows that ensured zero data loss and \textbf{99.9}\% uptime
+        \item Engineered automated monitoring solutions using Python and \textbf{Splunk} APIs, developing custom alerting logic and incident response workflows that reduced mean time to resolution (MTTR) by \textbf{30}\%
         \item Collaborated with cross-functional teams to deliver \textbf{300+} microservice releases, implementing feature flags, \textbf{A/B testing} frameworks, and rollback mechanisms that improved deployment safety and enabled rapid iteration
     \end{itemize}
 
@@ -91,24 +90,25 @@
 \begin{experienceSection}{Projects}
 
     \projectItem[
-        title={TalkDoc - AI-based Document Filler | Python, FastAPI, React, OpenAI GPT-4},
+        title={TalkDoc - AI-based Document Filler | Python, FastAPI, React, OpenAI GPT-4 | \href{https://github.com/Ajtambad/TalkDoc}{GitHub}},
         duration={Nov 2025},
     ]
     \begin{itemize}
         \vspace{-0.5em}
         \itemsep -6pt {}
         \item Built an AI-powered web application using \textbf{FastAPI} and \textbf{React} that automates document form completion through conversational interactions, leveraging\textbf{ OpenAI GPT-4} for natural language understanding and intelligent question generation
-        \item Implemented dynamic conversation flows and document generation, reducing form completion time by \textbf{40\%} while achieving \textbf{90\%+ accuracy} in mapping conversational responses to structured document fields
+        \item Implemented dynamic conversation flows and document generation, reducing form completion time by \textbf{40\%} while achieving over \textbf{90\%} accuracy in mapping conversational responses to structured document fields
     \end{itemize}
 
     \projectItem[
-        title={RAG Implementation for arXiv Papers | Python, DynamoDB, CLIP}, duration={Nov 2024},
+        title={RAG Implementation for arXiv Papers | Python, DynamoDB, CLIP | \href{https://docs.google.com/presentation/d/1P5tmrAAzAmritOmKmLIJuimb-F35OWqa/edit?usp=sharing&ouid=108855816524432121587&rtpof=true&sd=true}{Slides}}, duration={Nov 2024},
     ]
     \begin{itemize}
         \vspace{-0.5em}
         \itemsep -6pt {}
         \item Devised a multimodal pipeline using \textbf{Python} to extract and vectorize content from \textbf{2000+} arXiv papers, implementing \textbf{CLIP} and text embedding models, \textbf{DynamoDB} indexing and vector database storage
-        \item Implemented a similarity search and summarization pipeline with DynamoDB and GPT-4o mini to deliver concise, contextually relevant responses to user queries with an average response time of under \textbf{2 seconds}.
+        \item Implemented a similarity search and summarization pipeline with DynamoDB and GPT-4o mini to deliver concise, contextually relevant responses to user queries with an average response time of under \textbf{2 seconds}
+        \item Served as project co-lead, driving technical direction and delivering the final presentation, resulting in a strong grade
     \end{itemize}
 
     
