--- a/SDE/SDE.tex
+++ b/SDE/SDE.tex
@@ -52,8 +52,8 @@
     ]
     \begin{itemize}
         \itemsep -6pt {}
-        \item Driving migration from \textbf{RDS MySQL} to Amazon \textbf{Aurora PostgreSQL}, building \textbf{Terraform} automation pipelines to replicate production infrastructure and enable consistent, repeatable deployment across environments
-        \item Engineered \textbf{GitHub Actions CI/CD} pipelines automating \textbf{Docker} image builds and deployments to \textbf{AWS ECR}, reducing deployment time by \textbf{30}\%
+        \item Engineered \textbf{Terraform} automation pipelines for \textbf{AWS} infrastructure provisioning, implementing security controls and best practices across multiple services
+        \item Implemented gamification features with \textbf{FastAPI} backend and \textbf{MySQL} database to increase user engagement and data collection through reward-based incentives
     \end{itemize}
 
 
