Added AWS Certification to resume

--- a/SDE/SDE.tex
+++ b/SDE/SDE.tex
@@ -14,7 +14,7 @@
 % --------- Contact Information -----------
 \introduction[
     fullname={Amogh Jagadish Tambad},
-    location={San Francisco, CA},
+    location={Tempe, AZ},
     email={tambadamogh@gmail.com},
     phone={(480) 876-5096},
     linkedin={linkedin.com/in/ajtambad},
@@ -28,7 +28,6 @@
         graduation={May 2025},
         grade={4.00 GPA},
         program={Master of Science, Computer Science},
-        coursework={Cloud Computing, Data Processing at Scale, Data Mining, Software Security},
     ] % ASU
 
     \educationItem[
@@ -36,11 +35,16 @@
         graduation={May 2021},
         grade={3.77 GPA},
         program={Bachelor of Technology, Computer Science},
-        coursework={Data Structure and Algorithms, Operating Systems, Cloud Computing, Computer Networks},
     ]
 
-
 \end{educationSection}
+
+\begin{certificateSection}{Certifiations}
+    \begin{itemize}
+        \item AWS Solutions Architect Associate
+    \end{itemize} 
+\end{certificateSection}
+
 % --------- Experience -----------
 
     \begin{experienceSection}{Professional Experience}
@@ -78,7 +82,7 @@
     ]
     \begin{itemize}
         \itemsep -6pt {}
-        \item Developed and maintained \textbf{Java-based} microservices handling 5M+ daily healthcare transactions, implementing \textbf{RESTful APIs} and event-driven architectures that reduced patient data retrieval latency by \textbf{40\%}
+        \item Led migration of \textbf{500TB+} enterprise healthcare data from on-prem infrastructure to AWS using \textbf{Python} and \textbf{Bash} scripts and AWS \textbf{S3}, reducing storage costs by \textbf{30\%}
         \item Built cloud-native data transformation pipelines in \textbf{Python} to migrate \textbf{80}\% of enterprise data (500+ TB) from on-premise infrastructure to AWS, designing workflows that ensured zero data loss and \textbf{99.9}\% uptime
         \item Engineered automated monitoring solutions using Python and \textbf{Splunk} APIs, developing custom alerting logic and incident response workflows that reduced mean time to resolution (MTTR) by \textbf{30}\%
         \item Collaborated with cross-functional teams to deliver \textbf{300+} microservice releases, implementing feature flags, \textbf{A/B testing} frameworks, and rollback mechanisms that improved deployment safety and enabled rapid iteration
@@ -129,21 +133,13 @@
         skills={PostgreSQL, MySQL, MongoDB, Redis, DynamoDB, Vector DBs (FAISS, ChromaDB)}
     ]\\
     \skillItem[
-        category={Cloud \& Containers},
-        skills={AWS (EC2, S3, Lambda, EKS, SQS), Docker, Kubernetes, Terraform, Helm}
-    ] \\
-    \skillItem[
-        category={DevOps \& Tools},
-        skills={Git, Jenkins, ArgoCD, Kafka, Linux/Unix, Ansible, Infrastructure as Code}
-    ] \\
-    \skillItem[
-        category={Monitoring},
-        skills={Splunk, Zabbix, Prometheus, Cribl}
+        category={Cloud, DevOps, \& Monitoring},
+        skills={AWS, Docker, Kubernetes, Terraform, Helm, Git, Jenkins, ArgoCD, Kafka, Linux/Unix, Ansible, Splunk, Zabbix, Prometheus, Cribl}
     ] \\
     \skillItem[
         category={AI/ML},
         skills={PyTorch, TensorFlow, LangChain, LangGraph, RAG}
-    ]\\
+    ]
     
 \end{skillsSection}
 
