--- a/DevOps/DevOps.tex
+++ b/DevOps/DevOps.tex
@@ -14,7 +14,7 @@
 % --------- Contact Information -----------
 \introduction[
     fullname={Amogh Jagadish Tambad},
-    location = {San Francisco, CA},
+    location = {Tempe, AZ},
     email={tambadamogh@gmail.com},
     phone={(480) 876-5096},
     linkedin={linkedin.com/in/ajtambad},
@@ -28,7 +28,6 @@
         graduation={May 2025},
         grade={4.00 GPA},
         program={Master of Science, Computer Science},
-        coursework={Cloud Computing, Data Processing at Scale, Data Mining, Software Security},
     ] % ASU
 
     \educationItem[
@@ -36,9 +35,14 @@
         graduation={May 2021},
         grade={3.77 GPA},
         program={Bachelor of Technology, Computer Science},
-        coursework={Data Structure and Algorithms, Operating Systems, Cloud Computing, Computer Networks},
     ]
 \end{educationSection}
+
+\begin{certificateSection}{Certifiations}
+    \begin{itemize}
+        \item AWS Certified Solutions Architect – Associate (SAA-C03)
+    \end{itemize} 
+\end{certificateSection}
 
 % --------- Experience -----------
  \begin{experienceSection}{Professional Experience}
@@ -77,7 +81,7 @@
     ]
     \begin{itemize}
         \itemsep -6pt {}
-        \item Led migration of \textbf{500TB+} enterprise healthcare data from on-prem infrastructure to AWS using \textbf{Python} and \textbf{Bash} scripts and AWS \textbf{S3}, reducing storage costs by \textbf{30\%} while maintaining HIPAA compliance
+        \item Led migration of \textbf{500TB+} enterprise healthcare data from on-prem infrastructure to AWS using \textbf{Python} and \textbf{Bash} scripts and AWS \textbf{S3}, reducing storage costs by \textbf{30\%}
         \item Participated in 24/7 on-call rotations, triaging P1/P2 incidents and performing\textbf{ root cause analysis}, reducing mean time to resolution (MTTR) by \textbf{35\%} through improved runbooks and automated diagnostics
         \item Troubleshot \textbf{Jenkins} pipeline issues through root cause analysis, minimizing support ticket resolution time by \textbf{40\%} and ensuring \textbf{99.9\%} uptime for \textbf{CI/CD} workflows, leading to uninterrupted deployment pipelines
         \item Managed \textbf{300+} bi-weekly microservice deployments, using \textbf{Chef}, while also tracking them with \textbf{JIRA}, accelerating delivery of new UI and backend features in a fast-paced production environment
@@ -89,14 +93,14 @@
 \begin{experienceSection}{Academic Projects}
 
     \projectItem[
-        title={End-to-end Deployment Automation | AWS, GitHub Actions, Jenkins, Ansible, Bash | \href{https://github.com/Ajtambad/Terraform-Ansible-Project}{GitHub}},
-        duration={Apr 2025},
+        title={TalkDoc - AI-based Document Filler | Python, FastAPI, React, OpenAI GPT-4 | \href{https://github.com/Ajtambad/TalkDoc}{GitHub}},
+        duration={Nov 2025},
     ]
     \begin{itemize}
         \vspace{-0.5em}
         \itemsep -6pt {}
-        \item Reduced deployment time by \textbf{90\%} by building a fully automated \textbf{CI/CD} pipeline integrating Terraform (infrastructure provisioning), \textbf{Ansible} (configuration management), and \textbf{Jenkins/GitHub Actions}
-        \item Implemented dynamic inventory management, automated SSH key rotation, and IAM role-based access for secure, zero-touch deployments to AWS EC2 instances
+        \item Built an AI-powered web application using \textbf{FastAPI} and \textbf{React} that automates document form completion through conversational interactions, leveraging\textbf{ OpenAI GPT-4} for natural language understanding and intelligent question generation
+        \item Implemented dynamic conversation flows and document generation, reducing form completion time by \textbf{40\%} while achieving over \textbf{90\%} accuracy in mapping conversational responses to structured document fields
     \end{itemize}
 
 
@@ -121,7 +125,7 @@
     ] \\
     \skillItem[
         category={Cloud \& Containers},
-        skills={AWS (EC2, Lambda, S3, ECS, EKS), Docker, Kubernetes, Helm}
+        skills={AWS, Docker, Kubernetes, Helm}
     ] \\
     \skillItem[
         category={Infrastructure as Code},
