Added full name of certification

--- a/SDE/SDE.tex
+++ b/SDE/SDE.tex
@@ -41,7 +41,7 @@
 
 \begin{certificateSection}{Certifiations}
     \begin{itemize}
-        \item AWS Solutions Architect Associate
+        \item AWS Certified Solutions Architect – Associate (SAA-C03)
     \end{itemize} 
 \end{certificateSection}
 
